<resources>
    <string name="app_name" translatable="false">Neko</string>
    <string name="name">Name</string>
    <string name="manga">Manga</string>
    <string name="manhwa">Manhwa</string>
    <string name="manhua">Manhua</string>
    <string name="comic">Comic</string>
    <string name="webtoon">Webtoon</string>
    <string name="not_started">Not started</string>
    <string name="in_progress">In progress</string>
    <string name="read">Read</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="artist">Artist</string>
    <string name="description">Description</string>
    <string name="ongoing">Ongoing</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_status">Unknown Status</string>
    <string name="licensed">Licensed</string>
    <string name="completed">Completed</string>
    <string name="hiatus">Hiatus</string>
    <string name="cancelled">Cancelled</string>
    <string name="publication_complete">Publication Complete</string>
    <string name="unlock_library">Unlock to access Library</string>
    <string name="unlock">Unlock</string>
    <string name="lock_with_biometrics">Lock with biometrics</string>
    <string name="lock_when_idle">Lock when idle</string>
    <plurals name="chapters">
        <item quantity="one">%1$d chapter</item>
        <item quantity="other">%1$d chapters</item>
    </plurals>
    <string name="new_chapters">New chapters</string>
    <string name="unread">Unread</string>
    <string name="last_read_chapter_">Last read Chapter %1$s</string>
    <string name="chapter_">Chapter %1$s</string>
    <string name="chapter_x_of_y">Chapter %1$d of %2$d</string>
    <string name="all_chapters_read">All chapters read</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="marked_as_read">Marked as read</string>
    <string name="marked_as_unread">Marked as unread</string>
    <string name="removed_bookmark">Removed bookmark</string>
    <plurals name="remove_n_chapters">
        <item quantity="one">Remove %1$d downloaded chapter?</item>
        <item quantity="other">Remove %1$d downloaded chapters?</item>
    </plurals>
    <plurals name="pages_left">
        <item quantity="one">%1$d page left</item>
        <item quantity="other">%1$d pages left</item>
    </plurals>
    <plurals name="category">
        <item quantity="one">%d category</item>
        <item quantity="other">%d categories</item>
    </plurals>
    <string name="categories">Categories</string>
    <string name="adding_category_to_queue">Adding %1$s to update queue</string>
    <string name="_already_in_queue">%1$s is already in queue</string>
    <string name="create_new_category">Create new category</string>
    <string name="category_is_empty">Category is empty</string>
    <string name="category_is_hidden">Category is hidden</string>
    <string name="top_category">Top category (%1$s)</string>
    <string name="default_category">Default category</string>
    <string name="first_category">First category</string>
    <string name="categories_on_manual">Categories to update when manually refreshing</string>
    <string name="categories_in_global_update">All categories in global update</string>
    <string name="confirm_category_deletion">Delete category?</string>
    <string name="confirm_category_deletion_message">Manga in this category will moved into the
        default category.</string>
    <string name="already_in_category">Manga already in category</string>
    <string name="add_category">Add category</string>
    <string name="edit_categories">Edit categories</string>
    <string name="manage_category">Manage category</string>
    <string name="rename_category">Rename category</string>
    <string name="move_to_categories">Move to categories</string>
    <string name="hide_categories">Hide categories</string>
    <string name="category_with_name_exists">A category with that name already exists!</string>
    <string name="category_deleted">Category deleted</string>
    <string name="tip_long_press_category">Tip: Press and hold a category\'s name to collapse
        section</string>
    <string name="update">Update</string>
    <string name="what_should_update">What should update?</string>
    <string name="updating_">Updating %1$s</string>
    <string name="update_available">Update available</string>
    <string name="new_version_available">New version available!</string>
    <string name="no_new_updates_available">No new updates available</string>
    <string name="searching_for_updates">Searching for updates…</string>
    <string name="library">Library</string>
    <string name="updating_library">Updating library</string>
    <string name="selected_">Selected: %1$d</string>
    <string name="local">Local</string>
    <string name="remove_from_library_question">Remove from library?</string>
    <string name="library_search_hint">Search title, tags, source</string>
    <string name="library_is_empty_add_from_browse">Your library is empty, add series to your
        library from the browse tab.</string>
    <string name="no_matches_for_filters">No matches found for your current filters</string>
    <string name="sort_by_">Sort by: %1$s</string>
    <string name="total_chapters">Total chapters</string>
    <string name="date_added">Date added</string>
    <string name="last_read">Last read</string>
    <string name="last_updated">Last Updated</string>
    <string name="latest_chapter">Latest chapter</string>
    <string name="drag_and_drop">Drag &amp; Drop</string>
    <string name="display_options">Display options</string>
    <string name="list">List</string>
    <string name="comfortable_grid">Comfortable Grid</string>
    <string name="compact_grid">Compact Grid</string>
    <string name="start_with_filters_hidden">Start with filters hidden</string>
    <string name="download_badge">Download badges</string>
    <string name="always_show_library_fast_scroll">Always show library fast scroll</string>
    <string name="unread_badges">Unread badges</string>
    <string name="uniform_covers">Uniform covers</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="grid_options">Grid options</string>
    <string name="hide_badges">Hide badges</string>
    <string name="show_badges">Show badges</string>
    <string name="show_count">Show count</string>
    <string name="hide_filters_tip">To show filters again, tap the Library icon</string>
    <string name="display_as">Display as</string>
    <string name="new_chapters_found">New chapters found</string>
    <plurals name="for_n_titles">
        <item quantity="one">For %d title</item>
        <item quantity="other">For %d titles</item>
    </plurals>
    <plurals name="notification_and_n_more">
        <item quantity="one">and %1$d more chapter</item>
        <item quantity="other">and %1$d more chapters</item>
    </plurals>
    <string name="library_update_frequency">Library update frequency</string>
    <string name="library_update_order">Library update order</string>
    <string name="select_order_to_update">Select the order in which Tachiyomi checks for update</string>
    <string name="library_update_restriction">Library update restrictions</string>
    <string name="library_update_restriction_summary">Update only when the conditions are met</string>
    <string name="only_update_ongoing">Only update ongoing manga</string>
    <string name="sort_by_ignoring_articles">Sort by ignoring articles</string>
    <string name="when_sorting_ignore_articles">When sorting alphabetically, sort ignoring
        articles (a, an, the) at the start of manga titles</string>
    <string name="use_last_saved_migration_preferences">Use last saved pre-migration preferences
    and sources to mass migrate</string>
    <string name="categories_to_include_in_global_update">Categories to include in global update</string>
    <string name="include_in_global_update">Include in global update</string>
    <string name="auto_refresh_covers">Automatically refresh covers</string>
    <string name="auto_refresh_covers_summary">Refresh covers in library as well
        when updating library (overwrites local covers)</string>
    <string name="recents">Recents</string>
    <string name="updates">Updates</string>
    <string name="newly_added">Newly added</string>
    <string name="history">History</string>
    <string name="recent_updates">Recent updates</string>
    <string name="this_will_remove_the_read_date_for_x_question">This will remove the read date of
        \"%1$s\". Are you sure?</string>
    <string name="this_will_remove_the_read_date_question">This will remove the read date of this
        chapter. Are you sure?</string>
    <string name="reset_all_chapters_for_this_">Reset all chapters for this %1$s</string>
    <string name="source_dash_chapter_">%1$s - Ch.%2$s</string>
    <string name="last_read_">Last read %1$s</string>
    <string name="read_">Read %1$s</string>
    <string name="updated_">Updated %1$s</string>
    <string name="added_">Added %1$s</string>
    <string name="view_history">View history</string>
    <string name="view_all_updates">View all updates</string>
    <string name="search_recents">Search recents…</string>
    <string name="no_recent_chapters">No recent chapters</string>
    <string name="no_recently_read_manga">No recently read manga</string>
    <string name="group_all">Group all</string>
    <string name="ungroup_all">Ungroup all</string>
    <string name="only_history">Only history</string>
    <string name="only_updates">Only updates</string>
    <string name="reset_chapter_question">Reset chapter?</string>
    <string name="press_and_hold_to_reset_history">Press and hold to reset chapter history</string>
    <string name="search_filters">Search filters</string>
    <string name="no_more_results">No more results</string>
    <string name="no_results_found">No results found</string>
    <string name="local_library">Local library</string>
    <string name="other">Other</string>
    <string name="global_search">Global search…</string>
    <string name="view_latest">View latest</string>
    <string name="latest">Latest</string>
    <string name="browse">Browse</string>
    <string name="in_library">In Library</string>
    <string name="search_extensions">Search extensions…</string>
    <string name="all_sources">All sources</string>
    <string name="sources">Sources</string>
    <string name="random_manga">Random Manga</string>
    <string name="extensions">Extensions</string>
    <string name="extension_updates">Extension Updates</string>
    <string name="notify_extension_updates">Notify when extension updates are available</string>
    <string name="extension_info">Extension info</string>
    <string name="details">Details</string>
    <string name="obsolete">Obsolete</string>
    <string name="pending">Pending</string>
    <string name="installing">Installing</string>
    <string name="installed">Installed</string>
    <string name="trust">Trust</string>
    <string name="untrusted">Untrusted</string>
    <string name="uninstall">Uninstall</string>
    <string name="untrusted_extension">Untrusted extension</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="two_factor">2FA Code</string>
    <string name="show_password">Show password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="successfully_logged_in">Successfully logged in</string>
    <string name="could_not_log_in">Could not log in</string>
    <string name="cover_of_image">Cover of manga</string>
    <string name="loading">Loading…</string>
    <string name="remove">Remove</string>
    <string name="resume">Resume</string>
</resources>