<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.MaterialComponents.CardView"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/cover_of_image"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:textAppearance="@style/TextAppearance.MyTheme.Headline6" />

                <TextView
                    android:id="@+id/manga_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title"
                    android:textAppearance="@style/TextAppearance.MyTheme.Body2" />

                <TextView
                    android:id="@+id/last_read"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/manga_source"
                    android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2" />
            </RelativeLayout>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/remove" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/remove"
                android:text="@string/resume" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
